--- a/views/home.jade
+++ b/views/home.jade
@@ -4,4 +4,11 @@ head
   script(src="/static/jslibs/underscore.js",type='text/javascript')
   script(src="/static/jslibs/backbone.js",type='text/javascript')
   script(src="/static/js/client.js",type='text/javascript')
-body hello world
+  link(rel='stylesheet', type='text/css',href='/static/css/home.css')
+body
+  h1 NIBBLES SUPER AWESOME
+  .game-board
+
+  #snake-box-template.snake-box(style='display:none')
+  #row-template.row(style='display:none')
+    div(style='clear: both')
