--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,7 @@
 !!! 5
 head
   script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js",type='text/javascript')
+  script(src="/socket.io/socket.io.js",type='text/javascript')
   script(src="/static/jslibs/underscore.js",type='text/javascript')
   script(src="/static/jslibs/backbone.js",type='text/javascript')
   script(src="/static/js/client.js",type='text/javascript')
