Rendering some sweet ass snakes

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,3 +4,9 @@
   border: 1px solid black;
   background-color: #eee;
   float: left; }
+
+.snake-box.enemy {
+  background-color: red; }
+
+.snake-box.you {
+  background-color: green; }
