--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -7,3 +7,9 @@
     background-color: #eee;
     float: left;
 }
+.snake-box.enemy {
+    background-color: red;
+}
+.snake-box.you {
+    background-color: green;
+}
