--- a/views/home.jade
+++ b/views/home.jade
@@ -7,9 +7,10 @@ head
   script(src="/static/js/client.js",type='text/javascript')
   link(rel='stylesheet', type='text/css',href='/static/css/home.css')
 body
-  h1 NIBBLES SUPER AWESOME
-  .game-board
+  .main-column
+    h1 NIBBLES SUPER AWESOME
+    .game-board
 
-  #snake-box-template.snake-box(style='display:none')
-  #row-template.row(style='display:none')
-    div(style='clear: both')
+    #snake-box-template.snake-box(style='display:none')
+    #row-template.row(style='display:none')
+      div(style='clear: both')
