--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -1,11 +1,20 @@
+.main-column {
+    width: 500px;
+    margin: 0 auto;
+}
+.game-board {
+}
 .row {
 }
 .snake-box {
     width:20px;
     height:20px;
-    border: 1px solid black;
+    border-right: 1px solid #fff;
+    border-bottom: 1px solid #fff;
     background-color: #eee;
     float: left;
+}
+.snake-box:first {
 }
 .snake-box.enemy {
     background-color: red;
