--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,12 +1,37 @@
+html, body {
+  margin: 0;
+  padding: 0; }
+
+body {
+  background-image: url("/static/images/black_linen_v2.png");
+  background-repeat: repeat-x repeat-y; }
+
+.header-bar {
+  background-color: #434545;
+  -moz-box-shadow: 0px 1px 2px #333333;
+  -webkit-box-shadow: 3px 3px 5px #333333;
+  box-shadow: 0px 1px 2px #333333;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=90, Color='$color')";
+  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=90, Color='$color'); }
+  .header-bar .content {
+    width: 500px;
+    margin: 0 auto; }
+    .header-bar .content .name {
+      padding: 10px 0 10px 0;
+      font-size: 36px;
+      font-family: Arial;
+      color: white;
+      text-shadow: 1px 1px 3px #333;
+      font-weight: bold; }
+
 .main-column {
   width: 500px;
-  margin: 0 auto; }
+  margin: 40px auto 0 auto; }
 
 .snake-box {
-  width: 20px;
-  height: 20px;
-  border-right: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  width: 10px;
+  height: 10px;
+  margin: 0 1px 1px 0;
   background-color: #eee;
   float: left; }
 
