--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -1,16 +1,73 @@
+@mixin border-radius($radius) {
+  border-radius: $radius;
+  -moz-border-radius: $radius;
+  -webkit-border-radius: $radius;
+}
+@mixin softbutton {
+    background-color: #dfdfdf;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f9f9f9), to(#dfdfdf));
+    background: -moz-linear-gradient(#f9f9f9, #dfdfdf );
+    border: 1px solid #adadad;
+    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    font-size: 14px;
+    text-shadow: 0 1px 1px #FFF;
+}
+@mixin softbuttonhover {
+    background-color: #f9f9f9;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dfdfdf), to(#f9f9f9));
+    background: -moz-linear-gradient(#dfdfdf, #f9f9f9);
+}
+@mixin shadow($color: #333333, $distance: 0px, $spread:2px) {
+  -moz-box-shadow: 0px 1px 2px $color;
+  -webkit-box-shadow: $distance $distance $spread $color;
+  box-shadow: 0px 1px 2px $color;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=90, Color='$color')";
+  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=90, Color='$color');
+}
+
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-image: url('/static/images/black_linen_v2.png');
+    background-repeat: repeat-x repeat-y;
+}
+.header-bar {
+    background-color: #434545;
+    @include shadow(#333,3px, 5px);
+    .content {
+      width: 500px;
+      margin: 0 auto;
+      .name {
+          padding: 10px 0 10px 0;
+          font-size: 36px;
+          font-family: Arial;
+          color: white;
+          text-shadow: 1px 1px 3px #333;
+          font-weight: bold;
+      }
+    }
+}
+
 .main-column {
     width: 500px;
-    margin: 0 auto;
+    margin: 40px auto 0 auto;
 }
 .game-board {
 }
 .row {
 }
 .snake-box {
-    width:20px;
-    height:20px;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
+    width:10px;
+    height:10px;
+    margin: 0 1px 1px 0;
     background-color: #eee;
     float: left;
 }
