--- a/views/home.jade
+++ b/views/home.jade
@@ -7,8 +7,11 @@ head
   script(src="/static/js/client.js",type='text/javascript')
   link(rel='stylesheet', type='text/css',href='/static/css/home.css')
 body
+  .header-bar
+    .content
+      .name NIBBLES SUPER AWESOME
+
   .main-column
-    h1 NIBBLES SUPER AWESOME
     .game-board
 
     #snake-box-template.snake-box(style='display:none')
